--- a/app/src/main/res/layout/activity_check_out_screen.xml
+++ b/app/src/main/res/layout/activity_check_out_screen.xml
@@ -19,6 +19,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
 
+
     <EditText
         android:id="@+id/street"
         android:layout_width="wrap_content"
@@ -28,7 +29,7 @@
         android:hint="Street Address"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="0dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="71dp"
         android:layout_below="@+id/congrats"
         android:layout_centerHorizontal="true" />
 
@@ -45,7 +46,7 @@
         android:layout_alignStart="@+id/street"
         android:layout_marginTop="11dp" />
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,17 +72,16 @@
         android:layout_alignStart="@+id/state"
         android:layout_marginTop="13dp" />
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp"
-        android:layout_below="@+id/postal"
-        android:layout_marginTop="17dp"
-        android:layout_alignStart="@+id/postal"
-        android:layout_alignEnd="@+id/postal" />
 
+    <AutoCompleteTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/country"
+        android:hint="Country"
+        android:layout_below="@+id/postal"
+        android:layout_alignStart="@+id/postal"
+        android:layout_marginTop="14dp"
+        android:layout_alignEnd="@+id/postal" />
     <Button
         android:id="@+id/senddata"
         android:layout_width="wrap_content"
@@ -89,8 +89,27 @@
         android:text="Proceed"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="0dp"
-        android:layout_below="@+id/spinner"
+        android:layout_below="@+id/country"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
+
+    <TextView
+        android:id="@+id/userrr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/congrats"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp"
+        android:text="TextView"
+        android:textColor="@color/md_white_1000"/>
+    <TextView
+        android:id="@+id/userrr1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/congrats"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp"
+        android:text="TextView"
+        android:textColor="@color/md_white_1000"/>
 
 </RelativeLayout>
